--- a/lessons/first_notebook.ipynb
+++ b/lessons/first_notebook.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
        "'Tommy is cool'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,12 +53,14 @@
    "source": [
     "## Variable\n",
     "\n",
-    "* Variables can be used between cells\n"
+    "* Variables can be used between cells\n",
+    "* 'Restart' clears variables/memory\n",
+    "* Must run cell where variable is defined before running cell that uses variable"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -72,6 +74,11 @@
    "source": [
     "print(f\"Howdy {name}!\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
